--- a/inventory.tmpl.ini
+++ b/inventory.tmpl.ini
@@ -1,4 +1,4 @@
 [nextcloud]
-nextcloud ansible_host={{INSTANCE}} ansible_user=ubuntu
+nextcloud ansible_host={{INSTANCE}} ansible_user=ubuntu hostname=nextcloud
 [nextcloud:vars]
 ansible_ssh_common_args=-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ProxyCommand="sh -c \"aws ssm start-session --target %h --document-name AWS-StartSSHSession --parameters portNumber=%p\""
