--- a/roles/nextcloud/files/nginx.conf
+++ b/roles/nextcloud/files/nginx.conf
@@ -10,9 +10,9 @@ events { worker_connections 1024; }
 
 http {
 
-    upstream backend {
-      server app;
-    }
+#    upstream backend {
+#      server nextcloud;
+#    }
 
     server {
         listen 80;
@@ -75,11 +75,12 @@ http {
         gunzip          on;
 
         location @nextcloud {
-            proxy_pass http://backend;
+            proxy_pass http://nextcloud;
         }
 
         location / {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $host;
             proxy_set_header Host            $host;
             proxy_set_header X-Real-IP       $remote_addr;
 
