--- a/roles/nextcloud/templates/docker-compose.yaml
+++ b/roles/nextcloud/templates/docker-compose.yaml
@@ -2,39 +2,39 @@
 
 version: '2'
 
-volumes:
-  nextcloud:
-  db:
-
 services:
   db:
     container_name: nextcloud_db
     image: mariadb
     restart: unless-stopped
-    command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
+    command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW --innodb_read_only_compressed=OFF
     volumes:
-      - db:/var/lib/mysql
+      - /srv/nextcloud/db:/var/lib/mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=s00p3rs3krit
-      - MYSQL_PASSWORD=s00p3rs3krit
-      - MYSQL_DATABASE=nextcloud
-      - MYSQL_USER=nextcloud
+      - "MYSQL_ROOT_PASSWORD={{mysql_root_password}}"
+      - "MYSQL_USER={{mysql_user}}"
+      - "MYSQL_PASSWORD={{mysql_password}}"
+      - "MYSQL_DATABASE={{mysql_db}}"
 
   app:
     container_name: nextcloud
     image: nextcloud
     restart: unless-stopped
-    ports:
-      - 8080:80
-    links:
-      - db
     volumes:
-      - nextcloud:/var/www/html
+      - /srv/nextcloud/www:/var/www/html
     environment:
-      - MYSQL_PASSWORD=s00p3rs3krit
-      - MYSQL_DATABASE=nextcloud
-      - MYSQL_USER=nextcloud
-      - MYSQL_HOST=db
+      - "NEXTCLOUD_ADMIN_USER={{nextcloud_admin_user}}"
+      - "NEXTCLOUD_ADMIN_PASSWORD={{nextcloud_admin_password | replace("$","$$") }}"
+      - "MYSQL_DATABASE={{mysql_db}}"
+      - "MYSQL_PASSWORD={{mysql_password}}"
+      - "MYSQL_USER={{mysql_user}}"
+      - "MYSQL_HOST={{mysql_host}}"
+      - "TRUSTED_PROXIES=172.0.0.0/8"
+      - "NEXTCLOUD_TRUSTED_DOMAINS=cloud.stoopid.club nextcloud"
+      - "NEXTCLOUD_UPDATE=1"
+#    entrypoint: sh -c "sleep 5; /entrypoint.sh php-fpm"
+    depends_on:
+      - db
 
   web:
     container_name: nginx
@@ -43,8 +43,6 @@ services:
     ports:
       - "80:80"
       - "443:443"
-    links:
-      - app
     volumes:
       - /srv/nextcloud/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - /srv/nextcloud/nginx/conf.d:/etc/nginx/conf.d:ro
