--- a/site.yaml
+++ b/site.yaml
@@ -12,5 +12,6 @@
   hosts: nextcloud
   roles:
   - { role: docker, become: yes }
+  - { role: monitoring-client, become: yes }
   - { role: nextcloud, become: yes }
 
