--- a/roles/nextcloud/tasks/main.yaml
+++ b/roles/nextcloud/tasks/main.yaml
@@ -2,7 +2,7 @@
 
 - name: create paths
   file:
-    path: /srv/nextcloud/{item}
+    path: "/srv/nextcloud/{{item}}"
     state: directory
     recurse: true
   with_items:
